pythonを自動で起動するようにした